# snitch_cluster

./: .gitignore  .gitlab-ci.yml  .gitmodules  Bender.local  Bender.yml  mkdocs.yml  python-requirements.txt
.github/workflows/: build-docker.yml  ci.yml
docs/rm/: testbench.md
hw/future/src/dma/: axi_dma_backend.sv
hw/mem_interface/util/: run_vsim.sh
hw/reqrsp_interface/util/: compile.sh  run_vsim.sh
hw/snitch/src/: snitch.sv
hw/snitch_cluster/src/: snitch_cc.sv  snitch_cluster.sv  snitch_cluster_wrapper.sv.tpl
hw/snitch_cluster/util/: compile.sh  run_vsim.sh
hw/snitch_icache/util/: run_vsim.sh
hw/tcdm_interface/util/: run_vsim.sh
rm/: custom_instructions.html
runtime/Classes/: index.html  structcls__t.html  structdm__t.html  structdm__task__t.html  structeu__t.html  structident.html  structomp__prof__t.html  structomp__t.html  structomp__team__t.html  structperf__regs__t.html  structsnrt__allocator__t.html  structsnrt__barrier__t.html  unionperf__reg32__t.html
runtime/Examples/: index.html
runtime/Files/: alloc_8h.html  alloc__decls_8h.html  cls_8h.html  cls__decls_8h.html  cluster__interrupt__decls_8h.html  cluster__interrupts_8h.html  dir_08e106ea9e64fb26b666a763608fb67d.html  dir_21729c869193a00371717b990790d637.html  dir_687df1e3e4d8e7c59c4585f2d14d078b.html  dir_9d3f15c1a63d4b35f6c82fad85118daa.html  dir_a04768fb9c5f69508e8162509da4a728.html  dm_8h.html  dma_8h.html  dump_8h.html  eu_8h.html  eu__decls_8h.html  global__interrupt__decls_8h.html  global__interrupts_8h.html  index.html  interface_8h.html  kmp_8h.html  memory__decls_8h.html  omp_8h.html  openocd_8h.html  perf__cnt_8h.html  printf_8h.html  riscv_8h.html  riscv__decls_8h.html  start__decls_8h.html  sync_8h.html  sync__decls_8h.html  team_8h.html  team__decls_8h.html
runtime/Modules/: index.html
runtime/Namespaces/: index.html
runtime/Pages/: index.html
sw/: .gitignore  CMakeLists.txt
sw/apps/atax/data/: params.json
sw/apps/atax/scripts/: datagen.py
sw/apps/atax/src/: atax.h
sw/apps/correlation/scripts/: datagen.py
sw/apps/correlation/src/: correlation.h
sw/apps/covariance/data/: params.json
sw/apps/covariance/scripts/: datagen.py
sw/apps/covariance/src/: args.h  covariance.h  main.c
sw/apps/kmeans/: Makefile  roi_spec.json.tpl
sw/apps/kmeans/data/: datagen.py  params.json  test.py
sw/apps/kmeans/scripts/: datagen.py  verify.py
sw/apps/kmeans/src/: kmeans.h
sw/apps/montecarlo/pi_estimation/: Makefile
sw/apps/montecarlo/pi_estimation/data/: params.json
sw/apps/montecarlo/pi_estimation/scripts/: datagen.py
sw/apps/montecarlo/pi_estimation/src/: main.c
sw/blas/: CMakeLists.txt  axpy.h  blas.h  gemm.h  gemm_oc.h  gemm_oc_opt1d.h  gemm_oc_opt2d.h  gemm_tiled.h
sw/blas/axpy/src/: args.h  axpy.h  main.c
sw/blas/gemm/data/: datagen.py  params.hjson
sw/blas/gemm/src/: dma_tile2tile_test.h  dma_xfer_test.h  gemm.h  gemm_2dpipe.h  gemm_2dpipe_tpl.h  gemm_baseline.h  gemm_decls.h  gemm_decls_tpl.h  gemm_kernel.h  gemm_kernel_fp16.h  gemm_kernel_fp32.h  gemm_kernel_fp64.h  gemm_kernel_fp8.h  gemm_kernel_init_tpl.h  gemm_kernel_legacy.h  gemm_occamy_1dpipe.h  gemm_occamy_2dpipe.h  gemm_occamy_2dpipe_tpl.h  gemm_occamy_baseline.h  gemm_tiling_1dpipe_tpl.h  gemm_tiling_2dpipe_tpl.h  gemm_tiling_baseline_tpl.h  gemm_tiling_legacy.h  gemm_tiling_singlebuffer_tpl.h  gemm_tiling_streambuffer_tpl.h  gemm_tpl.h  main.c
sw/blas/gemv/: Makefile
sw/blas/gemv/scripts/: datagen.py  verify.py
sw/cmake/: SnitchConfig.cmake  SnitchUtils.cmake  toolchain-gcc.cmake  toolchain-llvm.cmake
sw/dnn/: batchnorm.h  maxpool.h
sw/dnn/src/: dnn.h
sw/ocrt/: CMakeLists.txt
sw/ocrt/device/: occamy_device.c  occamy_device.h  occamy_device_decls.h  occamy_memory.c  occamy_memory.h  occamy_start.c  ocrt.h  snrt.c  snrt.h
sw/ocrt/global/: heterogeneous_runtime.h
sw/ocrt/host/: host.c  host.h
sw/ocrt/platform/: occamy.h
sw/ocrt/runtime/: heterogeneous_runtime.h  heterogeneous_runtime_decls.h
sw/platform/: CMakeLists.txt  platform.h  platform_memory.h
sw/platform/occamy/: CMakeLists.txt  extract-origin-ld.sh  occamy_memory_map.h
sw/platform/snitch_cluster/: CMakeLists.txt  putchar.c  snitch_cluster_defs.h  snitch_cluster_global_interrupts.h  snitch_cluster_memory.c  snitch_cluster_memory.h  snitch_cluster_start.c  snitch_cluster_start.h
sw/prng/: lcg.h
sw/scripts/: CMakeLists.txt
sw/scripts/sim/: verification.py
sw/snRuntime/api/: alloc_decls.h  cls_decls.h  sync_decls.h
sw/snRuntime/src/: alloc.c  alloc.h  dm.h  dma.c  dma.h  dump.h  ssr.h  sync.c  sync.h  team.h
sw/snRuntime/src/omp/: eu.h  kmp.c  omp.c
sw/snrt/: CMakeLists.txt
sw/snrt/api/: alloc_decls.h  cls_decls.h  cluster_interrupt_decls.h  global_interrupt_decls.h  memory_decls.h  riscv_decls.h  sync_decls.h  team_decls.h
sw/snrt/api/omp/: eu_decls.h
sw/snrt/src/: alloc.c  alloc.h  cls.c  cls.h  cluster_interrupts.c  cluster_interrupts.h  dm.c  dm.h  dma.c  dma.h  dump.h  global_interrupts.c  global_interrupts.h  perf_cnt.h  printf.c  printf.h  riscv.h  snrt.h  ssr.c  ssr.h  start.c  sync.c  sync.h  team.c  team.h
sw/snrt/src/omp/: eu.c  eu.h  interface.h  kmp.c  kmp.h  omp.h
sw/test/: CMakeLists.txt
sw/test/blas/axpy/: CMakeLists.txt
sw/test/blas/gemm/: CMakeLists.txt  datagen.py  params.hjson  verify.py
sw/test/examples/: CMakeLists.txt
sw/test/occamy/blas/axpy/device/: main.c
sw/test/occamy/blas/axpy/host/: offload.c
sw/test/occamy/blas/gemm/: CMakeLists.txt
sw/test/occamy/blas/gemm/device/: data.h  datagen.py  main.c  params.hjson
sw/test/occamy/offload/host/: offload.c
sw/tests/: atomics.c  data_mover.c  openmp_double_buffering.c  openmp_for_static_schedule.c  while.c
util/bench/: roi.py  visualize.py
util/bench/tests/: test_roi.py
util/sim/: Simulation.py  data_utils.py  sim_utils.py
util/trace/: a2l.py  annotate.py  gen_trace.py  tracevis.py
