cmake_minimum_required(VERSION 3.10)

set(PLATFORM_INCLUDE_DIRS
        .
)

set(PLATFORM_HEADERS
        platform.h
)

set(PLATFORM_SOURCES
)


# Make Absolute
list(TRANSFORM PLATFORM_INCLUDE_DIRS PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")
list(TRANSFORM PLATFORM_HEADERS PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")
list(TRANSFORM PLATFORM_SOURCES PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")
list(APPEND PLATFORM_SOURCES ${PLATFORM_HEADERS})

if(USE_OCCAMY)
    add_subdirectory(occamy)

    list(APPEND PLATFORM_INCLUDE_DIRS ${PLATFORM_OCCAMY_INCLUDE_DIRS})
    list(APPEND PLATFORM_HEADERS ${PLATFORM_OCCAMY_HEADERS})
    list(APPEND PLATFORM_SOURCES ${PLATFORM_OCCAMY_SOURCES})
    message("SOURCES: ${PLATFORM_SOURCES}")
endif()

set(PLATFORM_INCLUDE_DIRS ${PLATFORM_INCLUDE_DIRS} PARENT_SCOPE)
set(PLATFORM_HEADERS ${PLATFORM_HEADERS} PARENT_SCOPE)
set(PLATFORM_SOURCES ${PLATFORM_SOURCES} PARENT_SCOPE)
