cmake_minimum_required(VERSION 3.10)

set(PLATFORM_INCLUDE_DIRS
        .
)

set(PLATFORM_HEADERS
        platform.h
        platform_memory.h
)

set(PLATFORM_SOURCES
)


# Make Absolute
list(TRANSFORM PLATFORM_INCLUDE_DIRS PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")
list(TRANSFORM PLATFORM_HEADERS PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")
list(TRANSFORM PLATFORM_SOURCES PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")
list(APPEND PLATFORM_SOURCES ${PLATFORM_HEADERS})

# Specific Platforms
add_subdirectory(snitch_cluster)
list(APPEND PLATFORM_SNC_INCLUDE_DIRS ${PLATFORM_INCLUDE_DIRS})
list(APPEND PLATFORM_SNC_HEADERS ${PLATFORM_HEADERS})
list(APPEND PLATFORM_SNC_SOURCES ${PLATFORM_SOURCES})

add_subdirectory(occamy)
list(APPEND PLATFORM_OCCAMY_INCLUDE_DIRS ${PLATFORM_INCLUDE_DIRS})
list(APPEND PLATFORM_OCCAMY_HEADERS ${PLATFORM_HEADERS})
list(APPEND PLATFORM_OCCAMY_SOURCES ${PLATFORM_SOURCES})

# Export Variables
set(PLATFORM_SNC_INCLUDE_DIRS ${PLATFORM_SNC_INCLUDE_DIRS} PARENT_SCOPE)
set(PLATFORM_SNC_HEADERS ${PLATFORM_SNC_HEADERS} PARENT_SCOPE)
set(PLATFORM_SNC_SOURCES ${PLATFORM_SNC_SOURCES} PARENT_SCOPE)
set(PLATFORM_OCCAMY_INCLUDE_DIRS ${PLATFORM_OCCAMY_INCLUDE_DIRS} PARENT_SCOPE)
set(PLATFORM_OCCAMY_HEADERS ${PLATFORM_OCCAMY_HEADERS} PARENT_SCOPE)
set(PLATFORM_OCCAMY_SOURCES ${PLATFORM_OCCAMY_SOURCES} PARENT_SCOPE)
set(PLATFORM_OCCAMY_EXTRACT_ORIGIN_SH ${PLATFORM_OCCAMY_EXTRACT_ORIGIN_SH} PARENT_SCOPE)