cmake_minimum_required(VERSION 3.10)

set(PLATFORM_INCLUDE_DIRS
        .
)

set(PLATFORM_HEADERS
        platform.h
        platform_memory.h
)

set(PLATFORM_SOURCES
)
list(APPEND PLATFORM_SOURCES ${PLATFORM_HEADERS})

# Make Absolute
transform_lists(
        PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/"
        LISTS PLATFORM_INCLUDE_DIRS PLATFORM_HEADERS PLATFORM_SOURCES
)

# Specific Platforms
add_subdirectory(snitch_cluster)
add_subdirectory(occamy)

list(APPEND PLATFORM_SNC_INCLUDE_DIRS ${PLATFORM_INCLUDE_DIRS})
list(APPEND PLATFORM_SNC_HEADERS ${PLATFORM_HEADERS})
list(APPEND PLATFORM_SNC_SOURCES ${PLATFORM_SOURCES})
list(APPEND PLATFORM_OCCAMY_INCLUDE_DIRS ${PLATFORM_INCLUDE_DIRS})
list(APPEND PLATFORM_OCCAMY_HEADERS ${PLATFORM_HEADERS})
list(APPEND PLATFORM_OCCAMY_SOURCES ${PLATFORM_SOURCES})

# Export
transform_lists(
        LISTS PLATFORM_SNC_INCLUDE_DIRS PLATFORM_SNC_HEADERS PLATFORM_SNC_SOURCES PLATFORM_OCCAMY_INCLUDE_DIRS
        PLATFORM_OCCAMY_HEADERS PLATFORM_OCCAMY_SOURCES PLATFORM_OCCAMY_EXTRACT_ORIGIN_SH
        PARENT_SCOPE
)